Change how to load main.js

--- a/donations/static/sky-addin/index.html
+++ b/donations/static/sky-addin/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-{%  load static %}
 <head>
   <meta charset="UTF-8" />
   <title>Decline Event Tile</title>
@@ -12,7 +11,7 @@
 <!-- 1) (Optional) Promise polyfill for older browsers -->
   <script src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
 
-  <script src="{%  static 'sky-addin/main.js' %}"></script>
+  <script src="/static/sky-addin/main.js'"></script>
   <!-- 3) Your UI markup (dropdown, checkbox, button, status) -->
 </head>
 <body>
